@@ -329,6 +329,14 @@ JIT.
 AC_USE_SYSTEM_EXTENSIONS macro and to test for functions used by the JIT 
 modules.
 
+52. Minor fixed to pcre2grep from Jason Hood:
+    * fixes some spacing;
+    * Windows doesn't usually use single quotes, so I've added a define
+      to use appropriate quotes [in an example];
+    * LC_ALL was displayed as "LCC_ALL";
+    * numbers 11, 12 & 13 should end in "th".
+    * use double quotes in usage message 
+
 
 Version 10.22 29-July-2016
 --------------------------
